# ThesisFauve

./: .gitignore  README.md  evaluation.py  pyproject.toml  tutorial.py
thesis_code/: create_different_experiment_files.py  dutch_train_questions.csv  english_train_questions.txt  evaluation.py  flesch_douma_berkenen.py  get_english_train.py  getting_ready_for_tuning.py  pyproject.toml  split_data.py  split_data_for_2_and_3.py  split_data_for_6_7_8.py  translate_dataset.py  trying_t5_model.py  using_tuned_model.py
thesis_code/data/: Complete_dataset_thesis.txt  Complete_dataset_thesis_stripped.txt  dataset_thesis.txt  giving_fine-tuning_t5_another_go.py  no_easy_formulation.txt  no_hard_formulation.txt  test.jsonl  train.jsonl
thesis_code/data/dataset/: dataset_test.csv  dataset_train.csv  dataset_val.csv
thesis_code/data/output/: test_results_baseline_t5_zero_shot.csv  test_results_baseline_t5_zero_shot_en.csv  test_results_txt_to_sql_easy_test_sql.csv  test_results_txt_to_sql_easy_train_formulation.csv  test_results_txt_to_sql_everything.csv  test_results_txt_to_sql_hard_test_sql.csv  test_results_txt_to_sql_hard_train_formulation.csv  test_results_txt_to_sql_medium_test_sql.csv  test_results_txt_to_sql_no_easy_formulation.csv  test_results_txt_to_sql_no_hard_formulation.csv  test_results_txt_to_sql_partial.csv  test_results_txt_to_sql_test_everything_en_t5_model_finetuned_with_english_questions.csv  test_results_txt_to_sql_train_dutch_0613_test_dutch.csv  test_results_txt_to_sql_train_dutch_0613_test_english.csv  test_results_txt_to_sql_train_dutch_0613_test_multi.csv  test_results_txt_to_sql_train_english_0613_test_dutch.csv  test_results_txt_to_sql_train_english_0613_test_english.csv  test_results_txt_to_sql_train_english_0613_test_multi.csv
thesis_code/data/test/: test_easy_sql.jsonl  test_everything.jsonl  test_everything_dutch_translated_sql.jsonl  test_hard_sql.jsonl  test_medium_sql.jsonl  test_no_easy_formulation.jsonl  test_no_hard_formulation.jsonl
thesis_code/data/train/: train_easy_hard_sql.jsonl  train_easy_medium_sql.jsonl  train_everything.jsonl  train_everything_dutch_translated_sql.jsonl  train_everything_english.jsonl  train_medium_hard_sql.jsonl  (+3 more)
(+77 files in other folders)
